# DAPO

./: .gitignore  build_analysis.sh  config.txt  generate_ir.py  readme.md  requirements.txt
Analysis/: CMakeLists.txt
Analysis/include/: CMakeLists.txt
Analysis/include/HI_duplicate_inst_rm/: CMakeLists.txt  HI_duplicate_inst_rm.h
Analysis/include/HI_feature_extractor/: CMakeLists.txt  HI_feature_extractor.h
Analysis/include/HI_find_function/: CMakeLists.txt  HI_find_function.h
Analysis/include/HI_loop_information_collect/: CMakeLists.txt  HI_loop_information_collect.h
Analysis/include/HI_print/: CMakeLists.txt
Analysis/include/HI_qor_estimator/: CMakeLists.txt  HI_instruction_files.h  HI_qor_estimator.h  clock_info.h
Analysis/include/HI_separate_const_offset_from_gep/: CMakeLists.txt  HI_separate_const_offset_from_gep.h
Analysis/include/HI_string_process/: CMakeLists.txt  HI_string_process.h
Analysis/include/HI_sys_exec/: CMakeLists.txt  HI_sys_exec.h
Analysis/lib/: CMakeLists.txt
Analysis/lib/HI_duplicate_inst_rm/: CMakeLists.txt  HI_duplicateinstrm.cpp
Analysis/lib/HI_feature_extractor/: CMakeLists.txt  HI_feature_extractor.cc
Analysis/lib/HI_find_function/: CMakeLists.txt  HI_find_function.cpp
Analysis/lib/HI_loop_information_collect/: CMakeLists.txt  HI_loop_information_collect.cpp
Analysis/lib/HI_print/: CMakeLists.txt
Analysis/lib/HI_qor_estimator/: CMakeLists.txt  HI_qor_estimator.cc  HI_qor_estimator_blockevaluation.cc  HI_qor_estimator_bramaccesstracer.cc  HI_qor_estimator_configparse.cc  HI_qor_estimator_functionevaluation.cc  HI_qor_estimator_instructionevaluation.cc  HI_qor_estimator_loopevaluation.cc
Analysis/lib/HI_separate_const_offset_from_gep/: CMakeLists.txt  HI_separate_const_offset_from_gep.cpp
Analysis/lib/HI_string_process/: CMakeLists.txt  HI_string_process.cc
Analysis/lib/HI_sys_exec/: CMakeLists.txt  HI_sys_exec.cpp
Analysis/tools/: CMakeLists.txt
Analysis/tools/feat/: CMakeLists.txt  feature_exctractor.cpp
Analysis/tools/qor/: CMakeLists.txt  qor_estimator.cpp
Dataset/HLSDesigns/BNNKernel/: bnn.cc  bnn_opt.cc  gen.tcl
Dataset/HLSDesigns/atax/: atax.cc  atax_opt.cc  gen.tcl
Dataset/HLSDesigns/crs/: crs.cc  crs_opt.cc  gen.tcl
Dataset/HLSDesigns/getTanh/: gen.tcl  getTanh.cc  getTanh_opt.cc  llvm_optimizer.py
Dataset/HLSDesigns/substring/: gen.tcl  llvm_optimizer.py  substring.cc  substring_opt.cc
Dataset/HLSDesigns/vecNormTrans/: gen.tcl  llvm_optimizer.py  vecNormTrans.cc  vecNormTrans_opt.cc
Dataset/trainingset/: random1.cc  random11.cc  random12.cc  random14.cc  random2.cc  random21.cc  random22.cc  random24.cc  random30.cc  random35.cc  random37.cc  random38.cc  random4.cc  random40.cc  random43.cc  random51.cc  random53.cc  random56.cc  random6.cc  random61.cc  random65.cc  random68.cc  random78.cc
GNNRL/GNN_Model/: Build_Dataset_Pytorch.py  GATv2_Pytorch.py  GCN_Pytorch.py  GED_Calculate.py  HAN_Pytorch.py  Infer_Pytorch.py  PNA_Pytorch.py  RGCN_Pytorch.py  Read_GED.py  SAGE_Pytorch.py
GNNRL/GNN_Model/GED_Result_testingO03/: GED_Result.pkl  GED_Result.txt  Index.pkl
GNNRL/GNN_Model/GED_Result_trainingO03/: GED_Result.pkl  GED_Result.txt  Index.pkl
GNNRL/GNN_Model/Raw_Graphs_O03_Testing/: Edge_0.csv  Edge_1.csv  Edge_10.csv  Edge_11.csv  Edge_12.csv  Edge_13.csv  Edge_14.csv  Edge_15.csv  Edge_16.csv  Edge_17.csv  Edge_18.csv  Edge_19.csv  Edge_2.csv  Edge_20.csv  Edge_21.csv  Edge_22.csv  Edge_23.csv  Edge_24.csv  Edge_25.csv  Edge_26.csv  Edge_27.csv  Edge_28.csv  Edge_29.csv  Edge_3.csv  Edge_30.csv  Edge_31.csv  Edge_32.csv  Edge_33.csv  Edge_34.csv  Edge_35.csv  Edge_36.csv  Edge_37.csv  Edge_38.csv  Edge_39.csv  Edge_4.csv  Edge_5.csv  Edge_6.csv  Edge_7.csv  Edge_8.csv  Edge_9.csv  (+39 more)
GNNRL/GNN_Model/Raw_Graphs_O03_Training/: Edge_0.csv  Edge_1.csv  Edge_10.csv  Edge_100.csv  Edge_101.csv  Edge_102.csv  Edge_103.csv  Edge_104.csv  Edge_105.csv  Edge_106.csv  Edge_107.csv  Edge_108.csv  Edge_109.csv  Edge_11.csv  Edge_110.csv  Edge_111.csv  Edge_112.csv  Edge_113.csv  Edge_114.csv  Edge_115.csv  Edge_116.csv  Edge_117.csv  Edge_118.csv  Edge_119.csv  Edge_12.csv  Edge_13.csv  Edge_14.csv  Edge_15.csv  Edge_16.csv  Edge_17.csv  Edge_18.csv  Edge_19.csv  Edge_2.csv  Edge_20.csv  Edge_21.csv  Edge_22.csv  Edge_23.csv  Edge_24.csv  Edge_25.csv  Edge_26.csv  (+194 more)
GNNRL/RL_Model/: draw_graphs.py  ppo_infer.py  ppo_ray.py  ppo_ray_multienv.py  utils.py
GNNRL/RL_Model/Experiment_results/: cycles_rgcn_random.pkl  cycles_rgcn_random_1.pkl  cycles_rgcn_random_2.pkl  cycles_rgcn_random_3.pkl  cycles_rgcn_random_4.pkl  cycles_rgcn_random_5.pkl  cycles_rgcn_random_6.pkl  cycles_rgcn_random_7.pkl  cycles_rgcn_test_0.pkl  cycles_rgcn_test_1.pkl  cycles_rgcn_test_2.pkl  cycles_rgcn_test_3.pkl  cycles_rgcn_test_4.pkl  cycles_rgcn_test_5.pkl  cycles_rgcn_test_6.pkl  cycles_rgcn_test_7.pkl
GNNRL/RL_Model/gym_env/: __init__.py
HLS_Data_Lib/: gen.tcl
LLVM_Tutorial/: llvm18_build.sh
LLVM_Tutorial/Implementations/: CMakeLists.txt
LLVM_Tutorial/Implementations/HI_APIntSrcAnalysis/: HI_APIntSrcAnalysis.cc
LLVM_Tutorial/Implementations/HI_Binding/: CMakeLists.txt
LLVM_Tutorial/Implementations/HI_ExtraCDFG/: HI_ExtraCDFG.cc  HI_ExtraCDFG.h
LLVM_Tutorial/Implementations/HI_ExtraNum/: HI_ExtraNum.cc
LLVM_Tutorial/Implementations/HI_IR2Verilog/: HI_IR2Verilog.h
LLVM_Tutorial/Implementations/HI_NoDirectiveTimingResourceEvaluation/: CMakeCache.txt  (+1 more)
Light_weight_HLS/: BuildLibs.sh
Light_weight_HLS/Implementations/HGraph/: CMakeLists.txt
Light_weight_HLS/Tools/: README
Models/GNNModels/: Build_Dataset.py  Build_Dataset_Pytorch.py  GATV2_Pytorch.py  GCN_Pytorch.py  HAN_Pytorch.py  HARP_Pytorch.py  HGED_Calculate.py  Infer_Pytorch.py  PNA_Pytorch.py  RGCN_Pytorch.py  SAGE_Pytorch.py  Train_All_Models.py
Models/RLModels/: RL_training.py  ablation_study.py  calculate_result.py  draw_graphs.py  greedy_search.py  ppo_infer.py  ppo_ray.py  ppo_ray_multienv.py  read.py  read_reward.py  setup.py  utils.py
Motivation/: run_passes.py
Motivation/bnn/: bnn.cc  gen.tcl
Motivation/crs/: gen.tcl
(+125 files in other folders)
